<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my GUI</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="CheckBox">Click this out!</string>
    <string name="Switch">Check this out!</string>
    <string name="hint">Type here</string>
    <string name="email">Enter your email address:</string>
    <string name="hintL">Type email here</string>
    <string name="password">Type your Password:</string>
    <string name="hintP">Password</string>
    <string name="login">Login</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="hintN">Enter your name</string>
    <string name="email1">Your email:</string>
    <string name="hintE">Enter your email</string>
    <string name="picture">Your picture:</string>
    <string name="picture_button">Click the button above to take a picture</string>
    <string name="Gotochattext">Go to chat</string>
    <string name="SendText">Send</string>
    <string name="ReceivedText">Receive</string>
    <string name="ChatHint">Type here</string>
    <string name="weather_pic">Weather Picture</string>
    <string name="check_forecast">Weather Forecast</string>
    <string name="goto_toolbar">Go to Toolbar page</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="overflow_choice">Overflow choice</string>
    <string name="alert_mess">What is your new message?</string>
    <string name="user_icon">Image</string>


</resources>
