<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintN"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email1"/>

    <EditText
        android:id="@+id/ed3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintE"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/picture"
        />

    <ImageButton
        android:id="@+id/imagelab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_button"/>

    <RelativeLayout
        android:id="@+id/nestRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="166dp">

        <Button
            android:id="@+id/lab4Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:onClick="sendMessage"
            android:text="@string/Gotochattext" />

        <Button
            android:id="@+id/ForecastButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lab4Button"
            android:layout_centerInParent="true"
            android:text="@string/check_forecast" />

        <Button
            android:id="@+id/goToToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ForecastButton"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/goto_toolbar" />


    </RelativeLayout>


</LinearLayout>