<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/choice1"
        android:title="@string/choice_1"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:visible="true"
        android:icon="@drawable/icons8_airport_24"/>

    <item
        android:id="@+id/choice2"
        android:title="@string/choice_2"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:visible="true"
        android:icon="@drawable/icons8_doughnut_24" />

    <item
        android:id="@+id/choice3"
        android:title="@string/choice_3"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:visible="true"
        android:icon="@drawable/icons8_robot_24"/>

    <item
        android:id="@+id/choice4"
        android:title="@string/overflow_choice"
        android:orderInCategory="3"
        app:showAsAction="never"
        />



</menu>