<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp"
        android:layout_alignParentTop="true"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:gravity="fill"
        android:text="@string/ButtonText"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBox"
        android:gravity="fill"
        android:layout_toRightOf="@id/button1"
        android:layout_below="@id/text1"/>


    <ImageButton
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:gravity="fill"
        android:layout_below="@id/button1"/>

    <Switch
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch"
        android:layout_toRightOf="@id/image1"
        android:layout_below="@id/button1">

    </Switch>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image1"
        android:hint="@string/hint"
        android:inputType="textPersonName" />

</RelativeLayout>