<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_weight="1"
    android:layout_gravity="fill">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp"
        android:layout_columnSpan="2"
        android:layout_rowSpan="4"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_rowSpan="4"
        android:layout_columnSpan="1"
        android:gravity="fill"
        android:text="@string/ButtonText"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="4"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:text="@string/CheckBox" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:gravity="fill"
        android:layout_rowSpan="4"
        android:layout_columnSpan="1"/>

    <Switch
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch"
        android:layout_rowSpan="4">
    </Switch>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowSpan="4"
        android:layout_columnSpan="2"
        android:hint="@string/hint"
        android:inputType="textPersonName"/>


</GridLayout>