<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ListView
        android:id="@+id/list_Lab4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:transcriptMode="alwaysScroll" />


    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/SendBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/SendText"
            />

        <EditText
            android:id="@+id/ChatEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ChatHint"
            android:layout_toEndOf="@+id/SendBt"
            android:layout_toStartOf="@+id/receiveBt"
            />

        <Button
            android:id="@+id/receiveBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReceivedText"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</RelativeLayout>